# polyv-player-sdk-demo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  RELEASE-NOTES.md
cmake/: ALL_BUILD.vcxproj.user.in  Depend.cmake  FindCurlAndSSL.cmake  FindDump.cmake  FindSQLite3.cmake  Helpers.cmake  Info.plist  Info.plist.in  PlvPlayerSDK.cmake  ResourceInfo.cmake  add_git_hash_to_info_plist_version.sh  add_git_hash_to_rc.py  encode_change.py  logo.icns  prebuild_define.cmake  prebuild_defined.h.in  resource.rc.in  resource_demo.rc.in  version.h.in
plv-player-sdk/mac/include/: plv-player-def.h
plv-player-sdk/mac/lib/: libcrypto.dylib  libcurl.dylib  libmpv.2.0.0.dylib  libplv-player-sdk.dylib  libssl.dylib
plv-player-sdk/windows/include/: plv-player-core.h  plv-player-def.h
plv-player-sdk/windows/lib/x64/: plv-player-sdk.lib
plv-player-sdk/windows/lib/x86/: plv-player-sdk.lib
test/: CMakeLists.txt
test/C#/: polyv-player-demo-csharp.sln
test/C#/polyv-player-demo-csharp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PlayerUtilities.cs  PlvPlayerSDK.cs  log.cs  polyv-player-demo-csharp.csproj
test/C#/polyv-player-demo-csharp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
test/QT/: App.rc  AppDef.h  Application.cpp  Application.h  CMakeLists.txt  DetectRecordingDialog.cpp  DetectRecordingDialog.h  DeviceWarnDialog.cpp  DeviceWarnDialog.h  Downloader.cpp  Downloader.h  GlobalConfig.cpp  GlobalConfig.h  InputDialog.cpp  InputDialog.h  LoginDialog.cpp  LoginDialog.h  Main.cpp  MainWindow.cpp  MainWindow.h  MigrateDialog.cpp  MigrateDialog.h  MsgBoxDialog.cpp  MsgBoxDialog.h  MultiPlayerDialog.cpp  MultiPlayerDialog.h  MyVideoList.cpp  MyVideoList.h  ParamDialog.cpp  ParamDialog.h  Player.cpp  Player.h  PlayerWidget.cpp  PlayerWidget.h  Resource.qrc  SdkManager.cpp  SdkManager.h  SettingDialog.cpp  SettingDialog.h  SliderControl.cpp  (+37 more)
test/QT/data/: locale.ini
test/QT/data/locale/: en-US.ini  zh-CN.ini
test/QT/data/themes/: Default.qss
test/QT/forms/: DetectRecordingDialog.ui  DeviceWarnDialog.ui  InputDialog.ui  LoginDialog.ui  MainWindow.ui  MigrateDialog.ui  MsgBoxDialog.ui  MultiPlayerDialog.ui  ParamDialog.ui  PermissionDialog.ui  SettingDialog.ui  VidDialog.ui
test/QT/mac/: PermissionDialog.cpp  PermissionDialog.h  platform-osx.mm
test/QT/win/: frameless-helper.cpp  frameless-helper.h
test/simple/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playimage.cpp  simple.qrc  util.cpp  util.h
test/simple/data/locale/: zh-CN.ini
